# dns-mx

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt
src/asio/: CMakeLists.txt  defer.hh  main.cc
src/c-ares/: CMakeLists.txt
src/c-ares/custom/: CMakeLists.txt  main.cc
src/c-ares/event-loop/: CMakeLists.txt  main.cc
